# glop

./: .gitignore  .travis.yml  README.markdown  glop.cabal  stack.yaml
Data/: GLop.hs
Data/GLop/: Parser.hs  Types.hs
src/: GLop.hs
